# android_scrcpy

./: LICENSE  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/suda/androidscrcpy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: am  termux-callback  termux-toast  termux-usb  termux-vibrate
app/src/main/cpp/: termux-api.c
app/src/main/java/com/suda/androidscrcpy/: MainActivity.kt  MainVM.kt  ScrcpyActivity.kt  ScrcpyVM.kt
app/src/main/java/com/suda/androidscrcpy/control/: ControlEventMessage.java  ReloadEventMessage.java  TouchEventMessage.java
app/src/main/java/com/suda/androidscrcpy/decoder/: RawAudioDecoder.java  VideoDecoder.java
app/src/main/java/com/suda/androidscrcpy/home/: Home.kt
app/src/main/java/com/suda/androidscrcpy/model/: AudioPacket.java  ByteUtils.java  MediaPacket.java  VideoPacket.java
app/src/main/java/com/suda/androidscrcpy/utils/: ADBUtils.kt  AssetsUtil.kt
app/src/main/java/com/termux/api/: SocketListener.java  TermuxAPIApplication.java  TermuxApiReceiver.java
app/src/main/java/com/termux/api/apis/: UsbAPI.java
app/src/main/java/com/termux/api/util/: ResultReturner.java
app/src/main/java/com/termux/shared/data/: DataUtils.java
app/src/main/java/com/termux/shared/logger/: Logger.java
app/src/main/res/layout/: surface_nav.xml  surface_no_nav.xml
app/src/main/res/layout-land/: surface_nav.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/suda/androidscrcpy/: ExampleUnitTest.kt
server/: build.gradle
(+32 files in other folders)
